@@ -43,6 +43,7 @@ Release date: TBA
 ..
   Put bug fixes that should not wait for a new minor version here
 
+* The ``invalid-name`` message is now more detailed when using multiple naming style regexes.
 
 
 What's New in Pylint 2.10.2?
